PBL/PBL_project17/internet_gateway.tf
resource "aws_internet_gateway" "ig" {
  vpc_id = aws_vpc.vpc.id

  tags = merge(
    var.tags,
    {
      Name = format("%s-%s", aws_vpc.vpc.id, "IG")
    }

  )
}
